<resources>
    <string name="app_name">agile</string>
    <string name="defaultLocation">南京</string>
    <string name="searchDes">搜索按钮</string>
    <string name="messageDes">消息按钮</string>
    <string name="searchButtonStr">搜索</string>
    <string name="autofillHints">输入活动名称或标签内容</string>

    <!-- string for button -->
    <string name = "Button11">足球</string>
    <string name = "Button12">篮球</string>
    <string name = "Button13">国际象棋</string>
    <string name = "Button14">健身</string>
    <string name = "Button15">扑克</string>
    <string name = "Button16">跑步</string>
    <string name = "Button21">三国杀</string>
    <string name = "Button22">游泳</string>
    <string name = "Button23">气排球</string>
    <string name = "Button24">乒乓球</string>
    <string name = "Button25">网球</string>
    <string name = "Button26">更多</string>
    <string name="navigate1">首页</string>
    <string name="navigate2">历史记录</string>
    <string name="navigate3">新建活动</string>
    <string name="navigate4">发现</string>
    <string name="navigate5">我的账户</string>
    <string name="loginNameHint">用户名/邮箱</string>
    <string name="loginPwHint">密码</string>
    <string name="newUser">快速注册</string>
    <string name="forgetpw">忘记密码</string>
    <string name="loginCHN">登录</string>
    <string name="score">信用积分: 100</string>
    <string name="ExcellentCredit">信用良好，请继续保持</string>
    <string name="GoodCredit">信用较好，请继续保持</string>
    <string name="NormalCredit">信用一般，请努力提高</string>
    <string name="notGoodCredit">信用较差，请努力提高</string>
    <string name="BadCredit">请提高信用，否则将注销帐号</string>
    <string name="register">注册</string>
    <string name="registHint1">邮箱</string>
    <string name="registerHint2">用户名</string>
    <string name="registerHint3">密码</string>
    <string name="registerHint4">验证码</string>
    <string name="newPassword">输入新密码</string>
    <string name="confirmPW">重复新密码</string>
    <string name="reset">重置密码</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>
    <string name="verifyCode">发送验证码</string>
    <string name="newEventDes">备注与活动说明</string>
    <string name="addLabel">添加标签</string>
    <string name="releaseEvent">发布活动</string>
</resources>
