<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_marginTop="50dp"
              android:layout_height="match_parent">
    <EditText android:layout_width="320dp"
              android:layout_gravity="center"
              android:id="@+id/FGphoneOrEmail"
              android:layout_marginTop="20dp"
              android:inputType="text"
              android:hint="@string/registHint1"
              android:layout_height="50dp"/>
    <EditText android:layout_width="320dp"
              android:id="@+id/reset_verify"
              android:inputType="text"
              android:hint="@string/registerHint4"
              android:layout_marginTop="10dp"
              android:layout_gravity="center"
              android:layout_height="50dp"/>
    <EditText android:layout_width="320dp"
              android:id="@+id/reset_pw"
              android:inputType="textPassword"
              android:hint="@string/newPassword"
              android:layout_marginTop="10dp"
              android:layout_gravity="center"
              android:layout_height="50dp"/>
    <EditText android:layout_width="320dp"
              android:id="@+id/confirm_pw"
              android:inputType="text"
              android:hint="@string/confirmPW"
              android:layout_marginTop="10dp"
              android:layout_gravity="center"
              android:layout_height="50dp"/>
    <Button android:layout_width="wrap_content"
            android:id="@+id/registerButton"
            android:text="@string/reset"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:background="@drawable/loginbuttontype"
            android:layout_height="wrap_content"/>
</LinearLayout>