<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content"
              android:text="发现"
              android:gravity="center"
              android:background="@color/gold"
              android:textStyle="bold"
              android:textSize="25sp"
              android:layout_width="match_parent"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="40dp"
                  android:orientation="horizontal"
                  android:background="@color/gold">
        <EditText android:layout_width="250dp"
                  android:hint="@string/searchButtonStr"
                  android:autofillHints="@string/autofillHints"
                  android:layout_marginTop="2dp"
                  android:background="@color/white"
                  android:inputType="text"
                  android:textColor="@color/black"
                  android:layout_marginStart="15dp"
                  android:id="@+id/findSearch"
                  android:textSize="25sp"
                  android:layout_height="35dp"/>
        <ImageButton android:layout_width="30dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginStart="10dp"
                     android:id="@+id/searchFindButton"
                     android:contentDescription="@string/searchDes"
                     android:scaleType="fitCenter"
                     android:src="@drawable/search"
                     android:layout_height="30dp" style="@style/ImageButton.Compat"/>
        <ImageButton android:layout_width="30dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginStart="15dp"
                     android:contentDescription="@string/messageDes"
                     android:id="@+id/messageInFind"
                     android:scaleType="fitCenter"
                     android:src="@drawable/message"
                     android:layout_height="30dp" style="@style/ImageButton.Compat"/>
    </LinearLayout>
        <ListView android:layout_width="wrap_content"
                  android:divider="@color/white"
                  android:dividerHeight="3dp"
                  android:layout_marginTop="5dp"
                  android:background="@color/white"
                  android:id="@+id/findNearListView"
                  android:layout_marginBottom="3dp"
                  android:layout_marginStart="12dp"
                  android:layout_height="445dp"/>
    <!-- 底部导航栏 -->
    <RadioGroup android:layout_width="match_parent"
                android:id="@+id/navigateGroup"
                android:background="@color/Gainsboro"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
        <RadioButton android:layout_width="wrap_content"
                     android:text="@string/navigate1"
                     style="@style/TabRadioButton"
                     android:id="@+id/homePageButton"
                     android:checked="false"
                     android:drawableTop="@drawable/home16"
                     android:layout_height="wrap_content"/>
        <RadioButton android:layout_width="wrap_content"
                     android:text="@string/navigate2"
                     style="@style/TabRadioButton"
                     android:id="@+id/eventListButton"
                     android:checked="false"
                     android:drawableTop="@drawable/history16"
                     android:layout_height="wrap_content"/>
        <RadioButton android:layout_width="wrap_content"
                     style="@style/TabRadioButton"
                     android:id="@+id/newEventButton"
                     android:text="@string/navigate3"
                     android:checked="false"
                     android:drawableTop="@drawable/add16"
                     android:layout_height="wrap_content"/>
        <RadioButton android:layout_width="wrap_content"
                     android:text="@string/navigate4"
                     style="@style/TabRadioButton"
                     android:id="@+id/findNearByButton"
                     android:checked="true"
                     android:drawableTop="@drawable/find16select"
                     android:layout_height="wrap_content"/>
        <RadioButton android:layout_width="wrap_content"
                     android:text="@string/navigate5"
                     style="@style/TabRadioButton"
                     android:id="@+id/myAccountButton"
                     android:checked="false"
                     android:drawableTop="@drawable/account16"
                     android:layout_height="wrap_content"/>

    </RadioGroup>
</LinearLayout>