<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_height="wrap_content"
              android:text="历史记录"
              android:gravity="center"
              android:background="@color/gold"
              android:textStyle="bold"
              android:textSize="25sp"
              android:layout_width="match_parent"/>
    <LinearLayout android:layout_width="match_parent"
                  android:id="@+id/historyTopBar"
                  android:layout_height="40dp"
                  android:orientation="horizontal"
                  android:background="@color/gold">
        <EditText android:layout_width="250dp"
                  android:hint="@string/searchButtonStr"
                  android:autofillHints="@string/autofillHints"
                  android:layout_marginTop="2dp"
                  android:background="@color/white"
                  android:inputType="text"
                  android:textColor="@color/black"
                  android:layout_marginStart="15dp"
                  android:id="@+id/historySearch"
                  android:textSize="25sp"
                  android:layout_height="35dp"/>
        <ImageButton android:layout_width="30dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginStart="10dp"
                     android:id="@+id/searchHistoryButton"
                     android:contentDescription="@string/searchDes"
                     android:scaleType="fitCenter"
                     android:src="@drawable/search"
                     android:layout_height="30dp" style="@style/ImageButton.Compat"/>
        <ImageButton android:layout_width="30dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginStart="15dp"
                     android:contentDescription="@string/messageDes"
                     android:id="@+id/messageInHistory"
                     android:scaleType="fitCenter"
                     android:src="@drawable/message"
                     android:layout_height="30dp" style="@style/ImageButton.Compat"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="25dp">
        <Button android:layout_width="165dp"
                android:id="@+id/allEvent"
                android:text="全部活动"
                android:textSize="20sp"
                android:background="@color/qmui_config_color_transparent"
                android:layout_height="match_parent"/>
        <ImageView android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   android:background="@drawable/line64"
                   android:layout_width="15dp"/>
        <Button android:layout_width="165dp"
                android:id="@+id/myHoldEvent"
                android:text="我发起的"
                android:background="@color/qmui_config_color_transparent"
                android:textSize="20sp"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <View android:layout_height="1dp"
          android:layout_marginTop="5dp"
          android:background="@color/black"
          android:layout_width="match_parent"/>
    <RelativeLayout android:layout_width="match_parent"
                    android:id="@+id/accountRelative"
                    android:layout_height="wrap_content">
        <ListView android:layout_width="wrap_content"
                  android:divider="@color/white"
                  android:dividerHeight="3dp"
                  android:layout_marginTop="10dp"
                  android:background="@color/white"
                  android:id="@+id/HistoryListView"
                  android:layout_marginBottom="50dp"
                  android:layout_marginStart="13.5dp"
                  android:layout_height="wrap_content">
        </ListView>
        <!-- 底部导航栏 -->
        <FrameLayout android:layout_width="match_parent"
                     android:id="@+id/bottomNavigate"
                     android:layout_alignParentBottom="true"
                     android:layout_height="wrap_content">
            <RadioGroup android:layout_width="match_parent"
                        android:id="@+id/navigateGroup"
                        android:background="@color/Gainsboro"
                        android:orientation="horizontal"
                        android:layout_height="match_parent">
                <RadioButton android:layout_width="wrap_content"
                             android:text="@string/navigate1"
                             style="@style/TabRadioButton"
                             android:id="@+id/homePageButton"
                             android:checked="false"
                             android:drawableTop="@drawable/home16"
                             android:layout_height="wrap_content"/>
                <RadioButton android:layout_width="wrap_content"
                             android:text="@string/navigate2"
                             style="@style/TabRadioButton"
                             android:id="@+id/eventListButton"
                             android:checked="true"
                             android:drawableTop="@drawable/history16select"
                             android:layout_height="wrap_content"/>
                <RadioButton android:layout_width="wrap_content"
                             style="@style/TabRadioButton"
                             android:id="@+id/newEventButton"
                             android:text="@string/navigate3"
                             android:checked="false"
                             android:drawableTop="@drawable/add16"
                             android:layout_height="wrap_content"/>
                <RadioButton android:layout_width="wrap_content"
                             android:text="@string/navigate4"
                             style="@style/TabRadioButton"
                             android:id="@+id/findNearByButton"
                             android:checked="false"
                             android:drawableTop="@drawable/find16"
                             android:layout_height="wrap_content"/>
                <RadioButton android:layout_width="wrap_content"
                             android:text="@string/navigate5"
                             style="@style/TabRadioButton"
                             android:id="@+id/myAccountButton"
                             android:checked="false"
                             android:drawableTop="@drawable/account16"
                             android:layout_height="wrap_content"/>

            </RadioGroup>
        </FrameLayout>

    </RelativeLayout>
</LinearLayout>