<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- 用户信息，包括实名，用户名以及头像 -->
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_marginTop="30dp"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <ImageView android:layout_width="128sp"
                   android:id="@+id/userImage"
                   android:clickable="true"
                   android:background="@color/qmui_config_color_transparent"
                   android:src="@drawable/account128"
                   android:layout_marginStart="30dp"
                   android:layout_height="128sp"/>
        <LinearLayout android:layout_width="wrap_content"
                      android:orientation="vertical"
                      android:layout_marginStart="30dp"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="150dp"
                      android:id="@+id/userNameText"
                      android:textSize="30sp"
                      android:textStyle="bold"
                      android:text="username"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="150dp"
                      android:id="@+id/realName"
                      android:textSize="25dp"
                      android:layout_marginTop="40dp"
                      android:text="实名: 张三"
                      android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 分割线 -->
    <View android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_marginTop="10dp"
          android:background="@color/black"/>
    <!-- 信用积分 -->
    <TextView android:layout_height="wrap_content"
              android:text="@string/score"
              android:layout_gravity="center"
              android:layout_marginTop="10dp"
              android:textSize="20sp"
              android:textStyle="bold"
              android:layout_width="wrap_content"/>
    <TextView android:layout_height="wrap_content"
              android:text="@string/goodCredit"
              android:layout_gravity="center"
              android:layout_marginTop="10dp"
              android:textSize="20sp"
              android:layout_width="wrap_content"/>
    <View android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_marginTop="10dp"
          android:background="@color/black"/>
    <!-- 设置项列表 -->
    <ListView android:layout_width="match_parent"
              android:layout_gravity="center"
              android:dividerHeight="2dp"
              android:id="@+id/setList"
              android:divider="@color/black"
              android:layout_height="wrap_content"/>
    <View android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_marginTop="2dp"
          android:background="@color/black"/>
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:layout_height="match_parent">
        <!-- 底部导航栏 -->
        <RadioGroup android:layout_width="match_parent"
                    android:id="@+id/navigateGroup"
                    android:background="@color/Gainsboro"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    android:layout_height="wrap_content">
            <RadioButton android:layout_width="wrap_content"
                         android:text="@string/navigate1"
                         style="@style/TabRadioButton"
                         android:id="@+id/homePageButton"
                         android:checked="false"
                         android:drawableTop="@drawable/home16"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:text="@string/navigate2"
                         style="@style/TabRadioButton"
                         android:id="@+id/eventListButton"
                         android:checked="false"
                         android:drawableTop="@drawable/history16"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         style="@style/TabRadioButton"
                         android:id="@+id/newEventButton"
                         android:text="@string/navigate3"
                         android:checked="false"
                         android:drawableTop="@drawable/add16"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:text="@string/navigate4"
                         style="@style/TabRadioButton"
                         android:id="@+id/findNearByButton"
                         android:checked="false"
                         android:drawableTop="@drawable/find16"
                         android:layout_height="wrap_content"/>
            <RadioButton android:layout_width="wrap_content"
                         android:text="@string/navigate5"
                         style="@style/TabRadioButton"
                         android:id="@+id/myAccountButton"
                         android:checked="true"
                         android:drawableTop="@drawable/account16select"
                         android:layout_height="wrap_content"/>

        </RadioGroup>
    </LinearLayout>
</LinearLayout>