<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent"
              android:text="新建活动"
              android:gravity="center"
              android:background="@color/gold"
              android:textSize="25sp"
              android:textStyle="bold"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              android:text="活动名称"
              android:textSize="20sp"
              android:textStyle="bold"
              android:layout_marginStart="50dp"
              android:layout_marginTop="15dp"
              android:layout_height="wrap_content"/>
    <EditText android:layout_width="250dp"
              android:background="@drawable/rectangle"
              android:id="@+id/newEventTitle"
              android:layout_marginStart="50dp"
              android:layout_marginTop="5dp"
              android:layout_height="30dp"/>

    <TextView android:layout_width="wrap_content"
              android:text="活动地点"
              android:textSize="20sp"
              android:textStyle="bold"
              android:layout_marginStart="50dp"
              android:layout_marginTop="10dp"
              android:layout_height="wrap_content"/>
    <EditText android:layout_width="250dp"
              android:id="@+id/newEventLocation"
              android:layout_marginStart="50dp"
              android:layout_marginTop="5dp"
              android:background="@drawable/rectangle"
              android:layout_height="30dp"/>

    <TextView android:layout_width="wrap_content"
              android:text="活动标签"
              android:textStyle="bold"
              android:textSize="20sp"
              android:layout_marginStart="50dp"
              android:layout_marginTop="10dp"
              android:layout_height="wrap_content"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_marginTop="5dp"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <EditText android:layout_width="120dp"
                  android:id="@+id/newEventLabel"
                  android:background="@drawable/rectangle"
                  android:layout_marginStart="50dp"
                  android:layout_height="30dp"/>
        <Button android:layout_width="90dp"
                android:id="@+id/addLabel"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/addLabel"
                android:background="@drawable/shape"
                android:layout_height="30dp"/>
    </LinearLayout>
    <myView.WarpLinearLayout android:layout_width="310dp"
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
                             android:id="@+id/labelList"
                             android:layout_marginStart="30dp"
                             android:layout_height="25dp">
        <TextView android:layout_width="wrap_content"
                  android:textSize="15sp"
                  android:id="@+id/newEventLabel1"
                  android:background="@drawable/shape"
                  android:layout_height="25dp"/>
        <TextView android:layout_width="wrap_content"
                  android:background="@drawable/shape"
                  android:textSize="15sp"
                  android:id="@+id/newEventLabel2"
                  android:layout_height="25dp"/>
        <TextView android:layout_width="wrap_content"
                  android:id="@+id/newEventLabel3"
                  android:background="@drawable/shape"
                  android:textSize="15sp"
                  android:layout_height="25dp"/>
    </myView.WarpLinearLayout>
    <TextView android:layout_width="wrap_content"
              android:text="活动日期"
              android:textStyle="bold"
              android:textSize="20sp"
              android:layout_marginStart="50dp"
              android:layout_marginTop="10dp"
              android:layout_height="wrap_content"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="horizontal"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="50dp"
                 android:id="@+id/year"
                  android:textSize="20sp"
                  android:text="2021"
                 android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="年"
                  android:textStyle="bold"
                  android:layout_marginStart="2dp"
                  android:textSize="20sp"
                  android:layout_height="wrap_content"/>
        <Spinner android:layout_width="wrap_content"
                 android:id="@+id/month"
                 android:layout_marginStart="5dp"
                 android:entries="@array/month"
                 android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="月"
                  android:textStyle="bold"
                  android:layout_marginStart="2dp"
                  android:textSize="20sp"
                  android:layout_height="wrap_content"/>
        <Spinner android:layout_width="wrap_content"
                 android:id="@+id/day"
                 android:layout_marginStart="5dp"
                 android:entries="@array/day"
                 android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="日"
                  android:textStyle="bold"
                  android:layout_marginStart="2dp"
                  android:textSize="20sp"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_marginStart="10dp"
                  android:orientation="horizontal"
                  android:layout_marginTop="5dp"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:text="时间"
                  android:textStyle="bold"
                  android:textSize="20sp"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="120dp"
                  android:id="@+id/newEventTime"
                  android:background="@drawable/rectangle"
                  android:layout_marginStart="10dp"
                  android:layout_height="30dp"/>
        <TextView android:layout_width="wrap_content"
                  android:text="最低信用"
                  android:textStyle="bold"
                  android:layout_marginStart="10dp"
                  android:textSize="20sp"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="60dp"
                  android:background="@drawable/rectangle"
                  android:id="@+id/creditLimit"
                  android:layout_marginStart="10dp"
                  android:layout_height="30dp"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content"
              android:layout_marginTop="10dp"
              android:text="@string/newEventDes"
              android:textStyle="bold"
              android:layout_marginStart="50dp"
              android:textSize="20sp"
              android:layout_height="wrap_content"/>
    <EditText android:layout_width="300dp"
              android:layout_marginTop="10dp"
              android:id="@+id/newEventDes"
              android:background="@drawable/rectangle"
              android:layout_gravity="center"
              android:layout_height="85dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/releaseEvent"
            android:background="@drawable/shape"
            android:textSize="20sp"
            android:id="@+id/releaseEvent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>
</LinearLayout>